--- a/src/app/Components/task/task.component.html
+++ b/src/app/Components/task/task.component.html
@@ -2,7 +2,7 @@
   <div class="card-header d-flex justify-content-between align-items-center">
     {{ task.title }}
     <div>
-      <button class="btn btn-primary " (click)="task.hide = !task.hide">
+      <button class="btn btn-primary me-2" (click)="task.hide = !task.hide">
         Show
       </button>
       <button class="btn btn-danger" (click)="deleteTask(task)">
